--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Birchwood West</title>
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
   <body>
     <div id="app"></div>
